refactor: Adding images of the Restaruant Reviews Application

--- a/developer.html
+++ b/developer.html
@@ -21,24 +21,17 @@
         </div>
     </div>
     <div class="code-sample">
-      <section class="styleguide__guides-section">
-        <div class="guides-section-left">
-        <section class="styleguide__page-header">
-          <div class="page-header">
-            <div class="container">
-              <p class="small">Please take a look at some of the projects that I have created over the years. Please note that all of the EverBank Financial projects are no longer live since they were recently acquired.</p>
-            </div>
-          </div>
-        </section>
         <ul class="guides-list container-medium">
-          <li class="guides-list__item g--half">
+          <li class="guides-list__item g-medium--full">
             <div class="primary-content">
-              <p class="large last">Restaurant Reviews Mobile Application<br />
+                <p>Please take a look at some of the projects that I have created over the years. Update: Projects created for EverBank Financial are no longer live. The company has gone through a massive rebrand after being acquired by TIAA Bank.</p>
+                <p class="large last">Restaurant Reviews Mobile Application<br />
                 <em class="small">Front-End development<br/>Project for Udacity.com</em><br />
                 <em class="small">Technology: html, css, javascript</em>
               </p>
-              <img src="https://jannaee.github.io/images/screenshots/RRA-largeViewport.PNG" /><img src="https://jannaee.github.io/images/screenshots/RRA-smviewport.PNG" />
-              <p>I was tasked to create a way to import xml data from an HR database and display it onto our public website. The major two requirements for this project was to allow the table to be sortable and dynamic.</p>
+              <img src="https://jannaee.github.io/images/screenshots/RRA-largeViewport.PNG" />
+              <img src="https://jannaee.github.io/images/screenshots/RRA-smviewport.PNG" />
+              <p>The requirements for this project include adding responsive images, and layouts, implementing service workers to allow for cahced information and seamless offline access. Another aspect of this project includes adding ARIA Roles and best practices so that users using assistive devices can easily access this application as well.</p>
             </div>
           </li>
           <li class="guides-list__item g--half">
