refactor: Added image of the mobile hub project

--- a/developer.html
+++ b/developer.html
@@ -22,15 +22,32 @@
     </div>
     <div class="code-sample">
         <ul class="guides-list container-medium">
-          <li class="guides-list__item g-medium--full">
+            <section class="styleguide__guides-section">
+                <div class="guides-section-left">
+                  <div class="clear container">
+                      <p>Below you will find a few of my front end development projects. The projects that I have created for Udacity are class projects that are still ongoing, but the code is available on github for you to review. Projects created for EverBank Financial, unfortunately are no longer live since they have recently undergone a rebrand.</p>
+                  </div>
+                </div>
+            </section>
+            <li class="guides-list__item g-medium--full">
+                <div class="primary-content">
+                    <p class="large last">Mobile Hub<br />
+                    <em class="small">Front-End development<br/>Project for Udacity.com</em><br />
+                    <em class="small">Technology: html, css (flexbox layout)</em>
+                  </p>
+                  <br />
+                  <img src="https://jannaee.github.io/images/screenshots/mobileHub-largeViewport.PNG" />
+                  <p>The requirements for this project include adding responsive images, and layouts, implementing service workers to allow for cahced information and seamless offline access. Another aspect of this project includes adding ARIA Roles and best practices so that users using assistive devices can easily access this application as well.</p>
+                </div>
+              </li>          
+            <li class="guides-list__item g-medium--full">
             <div class="primary-content">
-                <p>Please take a look at some of the projects that I have created over the years. Update: Projects created for EverBank Financial are no longer live. The company has gone through a massive rebrand after being acquired by TIAA Bank.</p>
                 <p class="large last">Restaurant Reviews Mobile Application<br />
                 <em class="small">Front-End development<br/>Project for Udacity.com</em><br />
-                <em class="small">Technology: html, css, javascript</em>
+                <em class="small">Technology: html, css (grid template areas layout), javascript</em>
               </p>
+              <br />
               <img src="https://jannaee.github.io/images/screenshots/RRA-largeViewport.PNG" />
-              <img src="https://jannaee.github.io/images/screenshots/RRA-smviewport.PNG" />
               <p>The requirements for this project include adding responsive images, and layouts, implementing service workers to allow for cahced information and seamless offline access. Another aspect of this project includes adding ARIA Roles and best practices so that users using assistive devices can easily access this application as well.</p>
             </div>
           </li>
@@ -40,6 +57,7 @@
                 <em class="small">Front-End development<br/>Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
+              <br />
               <img src="https://jannaee.github.io/images/workscreenshots/loanofficertool.jpg" />
               <p>I was tasked to create a way to import xml data from an HR database and display it onto our public website. The major two requirements for this project was to allow the table to be sortable and dynamic.</p>
             </div>
@@ -50,6 +68,7 @@
                 <em class="small">Front-End development<br />Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
+              <br />
               <img src="https://jannaee.github.io/images/workscreenshots/rememberme.svg" />
               <p>This assignment required creating a method to allow online account users to store away their user id's for future sessions. It was determined this feature should only support users of modern browsers. As a result, I opted to take advantage of using html5 local storage.</p>  
             </div>
@@ -64,6 +83,7 @@
                 Project for EverBank.com</em><br />
                 <em class="small">Technology: javascript, html, Raphael.js and Animate.css</em>
             </p>
+            <br />            
             <img src="https://jannaee.github.io/images/workscreenshots/dynamicbanner.svg">
             <p class="small">These rates do not reflect actual rates of EverBank products. This is a sample and banner only.</p>
             <p>
@@ -82,6 +102,7 @@
                 Project for EverBank.com</em><br />
                 <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
               </p>
+              <br />
               <img src="https://jannaee.github.io/images/workscreenshots/ratesTable.jpg">
               <p>At times, what a client asks for isn't necessarily what is truly needed. I find in these moments, it is our role as a developer to identify these situations and for us to consider responding with an alternate approach. In this instance of the rates table, it was requested of our team to supply rates to a third party vendor. The vendor would require daily refreshed rates, preferrably in a csv file in order for them to feed their web banners. </p>
               <p>I built a tool that provided unlimited access to the most up to date rates. This tool features a download button that converts the list into a downladable csv or txt file.</p>               
@@ -94,7 +115,8 @@
             <em class="small">Front-end development<br />
             Project created for self</em><br />
             <em class="small">Technology: javascript, html, css</em>
-            </p>              
+            </p> 
+            <br />                         
             <img src="https://jannaee.github.io/images/workscreenshots/rockpaperscissors.svg">
             <p>
             A simple excercise using nothing more than javascript and css to create a game of rock paper scissors. While the hand illustrations are not mine, I would like to recreate the images and redesign the game in Snap or Raphael js.
