--- a/developer.html
+++ b/developer.html
@@ -36,8 +36,10 @@
                     <em class="small">Technology: html, css (flexbox layout)</em>
                   </p>
                   <br />
-                  <img src="https://jannaee.github.io/images/screenshots/mobileHub-largeViewport.PNG" />
+                  <img src="https://jannaee.github.io/images/screenshots/mobileHub-largeViewport.jpg" />
                   <p>The requirements for this project include adding responsive images, and layouts, implementing service workers to allow for cahced information and seamless offline access. Another aspect of this project includes adding ARIA Roles and best practices so that users using assistive devices can easily access this application as well.</p>
+                  <p class="last"><a class="cta--primary" href="https://mlama007.github.io/MobileHub/" target="_blank">view site</a></p>
+
                 </div>
               </li>          
             <li class="guides-list__item g-medium--full">
