--- a/developer.html
+++ b/developer.html
@@ -20,44 +20,30 @@
           </div>
         </div>
     </div>
+
     <div class="code-sample">
         <ul class="guides-list container-medium">
-            <section class="styleguide__guides-section">
-                <div class="guides-section-left">
-                  <div class="clear container">
-                      <p>Below you will find a few of my front end development projects. The projects that I have created for Udacity are class projects that are still ongoing, but the code is available on github for you to review. Projects created for EverBank Financial, unfortunately are no longer live since they have recently undergone a rebrand.</p>
-                  </div>
-                </div>
-            </section>
             <li class="guides-list__item g-medium--full">
-                <div class="primary-content">
-                    <p class="large last">Mobile Hub<br />
-                    <em class="small">Front-End development<br/>Project for Udacity.com</em><br />
-                    <em class="small">Technology: html, css (flexbox layout)</em>
-                  </p>
-                  <br />
-                  <img src="https://jannaee.github.io/images/screenshots/MobileHubLrge.PNG" />
-                  <p>The requirements for this project include adding responsive images, and layouts, implementing service workers to allow for cahced information and seamless offline access. Another aspect of this project includes adding ARIA Roles and best practices so that users using assistive devices can easily access this application as well.</p>
-                  <p class="last"><a class="cta--primary" href="https://mlama007.github.io/MobileHub/" target="_blank">view site</a></p>
-
+               <p><em>Below you will find a few of my front end development projects. The projects that I have created for Udacity are class projects that are still ongoing, but the code is available on github for you to review. Projects created for EverBank Financial, unfortunately are no longer live since they have recently undergone a rebrand.</em></p><br/>
+                <div class="primary-content"><p class="large">Mobile Hub for Udacity.com</p>
+                  <p>This project is a work in progress. I worked in a team with three developers to wireframe this in Figma before we added design and functionality. The result is a list of valuable resources to for any level designer or developer.
+                  <a class="cta" href="https://mlama007.github.io/MobileHub/" target="_blank">View site ></a> <br/><br />
+                  <img src="https://jannaee.github.io/images/screenshots/mobileHubLrge.PNG" />
+                  </p>  
                 </div>
               </li>          
             <li class="guides-list__item g-medium--full">
             <div class="primary-content">
-                <p class="large last">Restaurant Reviews Mobile Application<br />
-                <em class="small">Front-End development<br/>Project for Udacity.com</em><br />
-                <em class="small">Technology: html, css (grid template areas layout), javascript</em>
-              </p>
-              <br />
-              <img src="https://jannaee.github.io/images/screenshots/RRA-largeViewport.PNG" />
-              <p>The requirements for this project include adding responsive images, and layouts, implementing service workers to allow for cahced information and seamless offline access. Another aspect of this project includes adding ARIA Roles and best practices so that users using assistive devices can easily access this application as well.</p>
+                <p class="large">Restaurant Reviews Mobile Application</p>
+                <p>The requirements for this project include adding responsive images, and layouts, implementing service workers to allow for cahced information and seamless offline access. Another aspect of this project includes adding ARIA Roles and best practices so that users using assistive devices can easily access this application as well.</p><br/><br />       
+              <img src="https://jannaee.github.io/images/screenshots/RRA-largeViewport.PNG"/><br />
             </div>
           </li>
           <li class="guides-list__item g--half">
             <div class="primary-content">
               <p class="large last">NMLS ID Directory<br />
                 <em class="small">Front-End development<br/>Project for EverBank.com</em><br />
-                <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
+                <em class="small">Technology: Sitecore CMS, JavaScript, html, css, jquery</em>
               </p>
               <br />
               <img src="https://jannaee.github.io/images/workscreenshots/loanofficertool.jpg" />
@@ -68,7 +54,7 @@
             <div class="primary-content">
               <p class="large last">Remember User ID<br />
                 <em class="small">Front-End development<br />Project for EverBank.com</em><br />
-                <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
+                <em class="small">Technology: Sitecore CMS, JavaScript, html, css, jquery</em>
               </p>
               <br />
               <img src="https://jannaee.github.io/images/workscreenshots/rememberme.svg" />
@@ -83,7 +69,7 @@
             <p class="large last">Mediaplex Retargeting Ads<br/>            
                 <em class="small">Front-end development<br />
                 Project for EverBank.com</em><br />
-                <em class="small">Technology: javascript, html, Raphael.js and Animate.css</em>
+                <em class="small">Technology: JavaScript, html, Raphael.js and Animate.css</em>
             </p>
             <br />            
             <img src="https://jannaee.github.io/images/workscreenshots/dynamicbanner.svg">
@@ -92,9 +78,7 @@
               One of the fun projects I had a chance to work on as a developer for EverBank. While this screenshot doesn't do the final design justice, I worked with a designer to create a banner ad that would dynamically pull in and display rates from our rates source. 
             </p>
             <p>
-              My first attempt at creating this banner included using Raphael JS framework. However, since these would have to live on various sites, the files had to be all encompassing. The Raphael library proved to be too large. My fall back solution involved creating ads built with css for animation, which I achieved by leveraging the Animate.css library.
-            </p>
-            <p class="last"> <a class="cta--primary" href="https://jannaee.github.io/dynamicBanner.html" target="_blank">view sample</a></p>
+              My first attempt at creating this banner included using Raphael JS framework. However, since these would have to live on various sites, the files had to be all encompassing. The Raphael library proved to be too large. My fall back solution involved creating ads built with css for animation, which I achieved by leveraging the Animate.css library.<a class="cta" href="https://jannaee.github.io/dynamicBanner.html" target="_blank">View sample</a></p>
           </div>
           </li>
           <li class="guides-list__item g--half g--last">
@@ -102,7 +86,7 @@
               <p class="large last">Downloadable Rates Table<br/>            
                 <em class="small">Front-End Development<br />
                 Project for EverBank.com</em><br />
-                <em class="small">Technology: Sitecore CMS, javascript, html, css, jquery</em>
+                <em class="small">Technology: Sitecore CMS, JavaScript, html, css, jquery</em>
               </p>
               <br />
               <img src="https://jannaee.github.io/images/workscreenshots/ratesTable.jpg">
@@ -113,17 +97,16 @@
 
             <li class="guides-list__item g--half">
             <div class="primary-content">
-            <p class="large last">A Pure js Game<br/>            
+            <p class="large last">A Pure JavaScript Game<br/>            
             <em class="small">Front-end development<br />
             Project created for self</em><br />
-            <em class="small">Technology: javascript, html, css</em>
+            <em class="small">Technology: JavaScript, html, css</em>
             </p> 
             <br />                         
             <img src="https://jannaee.github.io/images/workscreenshots/rockpaperscissors.svg">
             <p>
-            A simple excercise using nothing more than javascript and css to create a game of rock paper scissors. While the hand illustrations are not mine, I would like to recreate the images and redesign the game in Snap or Raphael js.
+            A simple excercise using nothing more than JavaScript and css to create a game of rock paper scissors. While the hand illustrations are not mine, I would like to recreate the images and redesign the game in Snap or Raphael js. <a class="cta" href="https://jannaee.github.io/rockPaperScissors-final.html" target="_blank">Play a game</a>
             </p>  
-            <p class="last"><a class="cta--primary" href="https://jannaee.github.io/rockPaperScissors-final.html" target="_blank">play</a></p>
             </div>
             </li>
         </ul>  
@@ -134,7 +117,7 @@
       <div class="code-sample">
           <div class="container-medium">
             <nav class="article-nav">
-              <a href="/" class="article-nav-link"><p>previous</p></a>
+              <a href="https://jannaee.github.io" class="article-nav-link"><p>previous</p></a>
               <a href="https://jannaee.github.io/tinkerer.html" class="article-nav-link"><p>next</p></a>
             </nav>
           </div>
