refactor: Adding absolute paths to files

--- a/missing.html
+++ b/missing.html
@@ -7,7 +7,7 @@
     <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
     <meta itemprop="name" content="Jannaee Sick Web Portfolio">
     <meta itemprop="description" content="Jannaee Sick Web Portfolio">
-    <link href='http://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="styles/components.css">
     <title>Jannaeé Sick</title>
 </head>
