--- a/rockPaperScissors-final.html
+++ b/rockPaperScissors-final.html
@@ -1,6 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!doctype html>
+<html lang="en" class="no-js no-touch">
+  <head>
+    <meta charset="utf-8" >
+    <meta name="description" content="Portfolio of Jannaee Sick">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1">
+    <meta itemprop="name" content="Jannaee Sick Web Portfolio">
+    <meta itemprop="description" content="Jannaee Sick Web Portfolio">
+    <link href='https://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="styles/components.css">
+    <title>Jannaeé Sick</title>
+  </head>
 	<title></title>
 	<style>
 	a {
