refactor: Added https

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="no-js no-touch" itemscope itemtype="http://schema.org/Article">
+<html lang="en" class="no-js no-touch">
   <head>
     <meta charset="utf-8" >
     <meta name="description" content="Portfolio of Jannaee Sick">
@@ -8,17 +8,17 @@
     <meta itemprop="name" content="Jannaee Sick Web Portfolio">
     <meta itemprop="description" content="Jannaee Sick Web Portfolio">
     <link href='https://fonts.googleapis.com/css?family=Magra:400,700|Poly:400italic,400' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="styles/components.css">
+    <link rel="stylesheet" href="https://jannaee.github.io/styles/components.css">
     <title>Jannaeé Sick</title>
   </head>
   <body class="page--index home">
     <div class="container home-featured-section">
-      <img src="/images/ego-onload.svg"> 
+      <img src="https://jannaee.github.io/images/ego-onload.svg"> 
       <div id="foot" class="container">
-        <h4 class="g-medium-half g-wide--1"><a href="developer.html">developer</a></h4>
-        <h4 class="g-medium-half g-wide--1"><a href="tinkerer.html">robotics tinkerer</a></h4>
-        <h4 class="g-medium-half g-medium--last g-wide--1 g-wide--last"><a href="3dhacker.html">3D hacker</a></h4>
-        <h4 class="g-medium-half g-wide--1"><a href="family-life.html">family life</a></h4>
+        <h4 class="g-medium-half g-wide--1"><a href="https://jannaee.github.io/developer.html">developer</a></h4>
+        <h4 class="g-medium-half g-wide--1"><a href="https://jannaee.github.io/tinkerer.html">robotics tinkerer</a></h4>
+        <h4 class="g-medium-half g-medium--last g-wide--1 g-wide--last"><a href="https://jannaee.github.io/3dhacker.html">3D hacker</a></h4>
+        <h4 class="g-medium-half g-wide--1"><a href="https://jannaee.github.io/family-life.html">family life</a></h4>
       </div>  
     </div>
     <!--This website was created with Google Web Starter Kit. I selected this framework in 2014 to experiment with scss. My goal is to recreate this website by the end of the year.-->
