refactor: Removing Family life page until I can develop it with more

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h4 class="g-medium-half g-wide--1"><a href="https://jannaee.github.io/developer.html">developer</a></h4>
         <h4 class="g-medium-half g-wide--1"><a href="https://jannaee.github.io/tinkerer.html">robotics tinkerer</a></h4>
         <h4 class="g-medium-half g-medium--last g-wide--1 g-wide--last"><a href="https://jannaee.github.io/3dhacker.html">3D hacker</a></h4>
-        <h4 class="g-medium-half g-wide--1"><a href="https://jannaee.github.io/family-life.html">family life</a></h4>
+        <h4 class="g-medium-half g-wide--1"><a href="https://jannaee.github.io/zombie-enthusiast.html">zombie enthusiast</a></h4>
       </div>  
     </div>
     <!--This website was created with Google Web Starter Kit. I selected this framework in 2014 to experiment with scss. My goal is to recreate this website by the end of the year.-->
