refactor: Page orders

--- a/3dhacker.html
+++ b/3dhacker.html
@@ -51,7 +51,7 @@
               <a href="tinkerer.html" class="article-nav-link ">
                 <p>previous</p>
               </a>
-              <a href="family-life.html" class="article-nav-link ">
+              <a href="zombie-enthusiast.html" class="article-nav-link ">
                 <p>next</p>
               </a>
             </nav>
