refactor: Minor color change in footer

--- a/3dhacker.html
+++ b/3dhacker.html
@@ -44,7 +44,7 @@
         </div>
       </section>     
     </div>
-    <footer id="g-footer" class="animalLover-section">
+    <footer id="g-footer" class="zombie-section">
       <div class="code-sample">
           <div class="container-medium">
             <nav class="article-nav">
