--- a/index.html
+++ b/index.html
@@ -6,25 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jannaee Sick | User Experience Designer & Front End Developer</title>
     <link rel="stylesheet" href="css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500|Spectral:200i,300,400" rel="stylesheet">
     <script type="application/javascript" src="/sw.js"></script>
+    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+
 </head>
 <body>
     <div class="container">
         <header>
             <img src="img/ego-onload-v2.png"/>
+            <h1>Hello.<br/>
+                I'm Jannaee</h1>
+            <p>I'm an artist who works professionally in User Experience Design and Front-end Development</p>
+
         </header>
         <nav>
             <ul>
-                <li><a href="#">Web & UX Development</a></li>
-                <li><a href="#">IOT Experiment</a></li>
-                <li><a href="#">3D Creations</a></li>
-                <li><a href="#">Other Musings</a></li>
-                <li><a href="#">Illustrations</a></li>
-                <li><a href="#">Contact me</a></li>
+                <li><a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a></li>
+                <li><a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a></li>
+                <li><a href="#sect3" title="Next Section">Other Musings <i class="fas fa-angle-right"></i></a></li>
+                <li><a href="#sect4" title="Next Section">Illustrations <i class="fas fa-angle-right"></i></a></li>
             </ul>
         </nav>
-    <main>Main information</main>
+        <main>
+            <section id="sect1">Web Development</section>
+            <section id="sect2">UX Development</section>
+            <section id="sect3">Other Musings</section>
+            <section id="sect4">Illustrations</section>
+
+        </main>
     </div>
 
 
