--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,500|Spectral:200i,300,400" rel="stylesheet">
     <script type="application/javascript" src="/sw.js"></script>
-    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
 </head>
 <body>
     <div class="container">
         <header>
-            <img src="img/ego-onload-v2.png"/>
+            <!-- <img src="img/ego-onload-v2.png"/> -->
             <h1>Hello.<br/>
                 I'm Jannaee</h1>
             <p>I'm an artist who works professionally in User Experience Design and Front-end Development</p>
-
         </header>
         <nav>
             <ul>
@@ -30,11 +30,21 @@
             </ul>
         </nav>
         <main>
-            <section id="sect1">Web Development</section>
-            <section id="sect2">UX Development</section>
-            <section id="sect3">Other Musings</section>
-            <section id="sect4">Illustrations</section>
+            <section id="sect1">
+                Web Development
+            </section>
 
+            <section id="sect2">
+                UX Development
+            </section>
+
+            <section id="sect3">
+                Other Musings
+            </section>
+
+            <section id="sect4">
+                Illustrations
+            </section>
         </main>
     </div>
 
