feat: Adding a disappearing navigation on scrollup

--- a/index.html
+++ b/index.html
@@ -16,19 +16,28 @@
 <body>
     <div class="container">
         <header>
+                <nav>
+                    <div class="nav-container">
+                        <a href="#" id="logo">JS</a>
+                        <button>
+                            <span></span>
+                            <span></span>                        
+                            <span></span>                            
+                        </button>
+                        <ul class="navbar-menu" >
+                            <li><a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a></li>
+                            <li><a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a></li>
+                            <li><a href="#sect3" title="Next Section">Other Musings <i class="fas fa-angle-right"></i></a></li>
+                            <li><a href="#sect4" title="Next Section">Illustrations <i class="fas fa-angle-right"></i></a></li>
+                        </ul>
+                    </div>
+                </nav>
             <!-- <img src="img/ego-onload-v2.png"/> -->
             <h1>Hello.<br/>
                 I'm Jannaee</h1>
             <p>I'm an artist who works professionally in User Experience Design and Front-end Development</p>
         </header>
-        <nav>
-            <ul>
-                <li><a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a></li>
-                <li><a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a></li>
-                <li><a href="#sect3" title="Next Section">Other Musings <i class="fas fa-angle-right"></i></a></li>
-                <li><a href="#sect4" title="Next Section">Illustrations <i class="fas fa-angle-right"></i></a></li>
-            </ul>
-        </nav>
+
         <main>
             <section id="sect1">
                 Web Development
