refactor: Updating media query for navigation

--- a/index.html
+++ b/index.html
@@ -11,20 +11,13 @@
     <script type="application/javascript" src="/sw.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/main.js"></script>
-
 </head>
 <body>
     <div class="container">
         <header>
                 <nav>
                     <div class="nav-container">
-                        <a href="#" id="logo">JS</a>
-                        <button>
-                            <span></span>
-                            <span></span>                        
-                            <span></span>                            
-                        </button>
-                        <ul class="navbar-menu" >
+                        <ul class="navbar-menu">
                             <li><a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a></li>
                             <li><a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a></li>
                             <li><a href="#sect3" title="Next Section">Other Musings <i class="fas fa-angle-right"></i></a></li>
@@ -58,7 +51,17 @@
     </div>
 
 
-    <footer>&copy; 2018 - Handcoded with ❤ by Jannaee Sick</footer>
+    <footer>
+        <h4>If you think I'm interesting here just wait till you connect with me</h4>
+        <ul class="connectWithMe">
+            <li class="fab fa-linkedin"> <a href="#">LinkedIn</a></li>
+            <li class="fab fa-github"> <a href="#">Github</a></li>
+            <li class="fab fa-facebook-f"> <a href="#">Facebook</a></li>            
+        </ul>
+
+        <p>&copy; 2018 - Handcoded with ❤ by Jannaee Sick</p>
+
+    </footer>
 
 </body>
 </html>
