refactor: Updating mobile version of hamburger icon

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <div class="container">
         <header>
                 <nav>
-                    <div class="nav-container">
+                    <div class="nav-container" id="myHamNav">
+                        <!-- hamburger navigation -->
+                        <a href="javascript:void(0);" class="icon" onclick="openHamNav()">                        
+                        <i class="fas fa-bars"></i>
                         <ul class="navbar-menu">
                             <li><a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a></li>
                             <li><a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a></li>
