refactor :Debugged code to make mobile nav work

--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
 <body>
     <div class="container">
         <header>
-                <nav>
-                    <div class="nav-container" id="myHamNav">
-                        <!-- hamburger navigation -->
-                        <a href="javascript:void(0);" class="icon" onclick="openHamNav()">                        
-                        <i class="fas fa-bars"></i>
-                        <ul class="navbar-menu">
-                            <li><a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a></li>
-                            <li><a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a></li>
-                            <li><a href="#sect3" title="Next Section">Other Musings <i class="fas fa-angle-right"></i></a></li>
-                            <li><a href="#sect4" title="Next Section">Illustrations <i class="fas fa-angle-right"></i></a></li>
-                        </ul>
+            <nav>
+                <div class="nav-container" id="myHamNav">
+                    <!-- hamburger navigation -->
+                    <div class="navbar-menu">
+                        <a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a>
+                        <a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a>
+                        <a href="#sect3" title="Next Section">Other Musings <i class="fas fa-angle-right"></i></a>
+                        <a href="#sect4" title="Next Section">Illustrations <i class="fas fa-angle-right"></i></a>
+                        <a href="javascript:void(0);" class="icon" onclick="openHamNav()"><i class="fas fa-bars"></i></a>
                     </div>
-                </nav>
+                </div>
+            </nav>
             <!-- <img src="img/ego-onload-v2.png"/> -->
             <h1>Hello.<br/>
                 I'm Jannaee</h1>
