refactor:Fixed all navigation erros, creating style hierarchy

--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
                 <div class="nav-container" id="myHamNav">
                     <!-- hamburger navigation -->
                     <div class="navbar-menu">
-                        <a href="#sect1" class="active" title="Next Section">Web Development <i class="fas fa-angle-right"></i></a>
-                        <a href="#sect2" title="Next Section">UX Development <i class="fas fa-angle-right"></i></a>
-                        <a href="#sect3" title="Next Section">Other Musings <i class="fas fa-angle-right"></i></a>
-                        <a href="#sect4" title="Next Section">Illustrations <i class="fas fa-angle-right"></i></a>
+                        <a href="#sect1" title="Next Section" class="active">Web Development</a>
+                        <a href="#sect2" title="Next Section">UX Development</a>
+                        <a href="#sect3" title="Next Section">Illustrations</a>
+                        <a href="#sect4" title="Next Section">Other</a>
                         <a href="javascript:void(0);" class="icon" onclick="openHamNav()"><i class="fas fa-bars"></i></a>
                     </div>
                 </div>
             </nav>
-            <!-- <img src="img/ego-onload-v2.png"/> -->
-            <h1>Hello.<br/>
+
+            <div class="intro">            
+                <h1>Hello.<br/>
                 I'm Jannaee</h1>
-            <p>I'm an artist who works professionally in User Experience Design and Front-end Development</p>
+                <p>I'm an artist who works professionally as a User Experience Designer and Front-end Developer. I specialize in deliveriving the unexpected - in a good way.</p>
+            </div>
         </header>
 
         <main>
@@ -43,11 +45,11 @@
             </section>
 
             <section id="sect3">
-                Other Musings
+                Illustrations
             </section>
 
             <section id="sect4">
-                Illustrations
+                Other Musings
             </section>
         </main>
     </div>
@@ -55,12 +57,11 @@
 
     <footer>
         <h4>If you think I'm interesting here just wait till you connect with me</h4>
-        <ul class="connectWithMe">
-            <li class="fab fa-linkedin"> <a href="#">LinkedIn</a></li>
-            <li class="fab fa-github"> <a href="#">Github</a></li>
-            <li class="fab fa-facebook-f"> <a href="#">Facebook</a></li>            
-        </ul>
-
+        <div class="connectWithMe">
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#" alt="facebook"></a><i class="fab fa-facebook-f"></i></a>           
+        </div>
         <p>&copy; 2018 - Handcoded with ❤ by Jannaee Sick</p>
 
     </footer>
