refactoring:Moving on to design

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
                         <a href="#sect2" title="Next Section">UX Development</a>
                         <a href="#sect3" title="Next Section">Illustrations</a>
                         <a href="#sect4" title="Next Section">Other</a>
-                        <a href="javascript:void(0);" class="icon" onclick="openHamNav()"><i class="fas fa-bars"></i></a>
+                        <a href="javascript:void(0);" class="icon">
+                            <div class="menuIcon" onclick="animatedMenu(this)">
+                                <div class="bar1"></div>
+                                <div class="bar2"></div>
+                                <div class="bar3"></div>
+                            </div>
+                        </a>                       
                     </div>
                 </div>
             </nav>
@@ -31,7 +37,7 @@
             <div class="intro">            
                 <h1>Hello.<br/>
                 I'm Jannaee</h1>
-                <p>I'm an artist who works professionally as a User Experience Designer and Front-end Developer. I specialize in deliveriving the unexpected - in a good way.</p>
+                <p>I'm an artist living in Raleigh, North Carolina. I have worked professionally as a User Experience Designer and Front-end Developmer but I specialize in deliveriving the unexpected - in a good way.</p>
             </div>
         </header>
 
@@ -54,7 +60,6 @@
         </main>
     </div>
 
-
     <footer>
         <h4>If you think I'm interesting here just wait till you connect with me</h4>
         <div class="connectWithMe">
@@ -63,7 +68,6 @@
             <a href="#" alt="facebook"></a><i class="fab fa-facebook-f"></i></a>           
         </div>
         <p>&copy; 2018 - Handcoded with ❤ by Jannaee Sick</p>
-
     </footer>
 
 </body>
