--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             <div class="intro">            
                 <h1>Hello.<br/>
                 I'm Jannaee</h1>
-                <p>I'm an artist living in Raleigh, North Carolina. I have worked professionally as a User Experience Designer and Front-end Developmer but I specialize in deliveriving the unexpected - in a good way.</p>
+                <p>I'm an artist living in Raleigh, North Carolina. I have enjoyed exploring web development for over 7 years. My professional history includes work as an illustrator, graphic designer, digital UX designer and front end developer. 
+                    But fine arts is my love since my early days of kindergarten. (Ahhh, I still love the smell of a brand new pack of crayons.)</p>
             </div>
         </header>
 
