--- a/index.html
+++ b/index.html
@@ -33,42 +33,42 @@
                     </div>
                 </div>
             </nav>
-
-            <div class="intro">            
-                <h1>Hello.<br/>
-                I'm Jannaee</h1>
-                <p>I'm an artist living in Raleigh, North Carolina. I have enjoyed exploring web development for over 7 years. My professional history includes work as an illustrator, graphic designer, digital UX designer and front end developer. 
-                    But fine arts is my love since my early days of kindergarten. (Ahhh, I still love the smell of a brand new pack of crayons.)</p>
-            </div>
         </header>
-
         <main>
-            <section id="sect1">
-                Web Development
-            </section>
+            <section id="sect1"><!--Blank section for hero image to show-->            </section>
 
             <section id="sect2">
-                UX Development
+                    <h1>Hello.<br/>
+                        I'm Jannaee</h1>
+                        <p>I'm an artist living in Raleigh, North Carolina. I have enjoyed exploring web development for over 7 years. My professional history includes work as an illustrator, graphic designer, digital UX designer and front end developer. 
+                        But fine arts is my love since my early days of kindergarten. (Ahhh, I still love the smell of a brand new pack of crayons.)</p>
             </section>
 
             <section id="sect3">
-                Illustrations
+                    <h2>Web & UX Development</h2>
+
             </section>
 
             <section id="sect4">
-                Other Musings
+                <h2>Illustrations</h2>
             </section>
+            
+            <section id="sect5">
+                <h2>Other Musings</h2>
+            </section>
+
+            <section id="sect6"><!--Blank section for hero image to show--></section>            
         </main>
     </div>
 
     <footer>
-        <h4>If you think I'm interesting here just wait till you connect with me</h4>
         <div class="connectWithMe">
+            <h4>If you think I'm interesting connect with me.</h4>
             <a href="#"><i class="fab fa-linkedin"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
             <a href="#" alt="facebook"></a><i class="fab fa-facebook-f"></i></a>           
+            <p>&copy; 2018 - Handcoded with ❤ by Jannaee Sick</p>
         </div>
-        <p>&copy; 2018 - Handcoded with ❤ by Jannaee Sick</p>
     </footer>
 
 </body>
