refactor: Preparing files for first launch

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- <script type="application/javascript" src="/sw.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/behance.js"></script>
+    <!-- Bring in data from Behance ver 1.2 -->
+    <!-- <script type="text/javascript" src="js/behance.js"></script> -->
 </head>
 <body>
     <div class="container">
@@ -21,9 +22,10 @@
                     <!-- hamburger navigation -->
                     <div class="navbar-menu">
                         <a href="#sect1" title="Next Section" class="active">&nbsp;</a>
-                        <a href="#sect2" title="Next Section">Home</a>
-                        <a href="#sect3" title="Next Section">Illustrations</a>
-                        <a href="#sect4" title="Next Section">Other</a>
+                        <a href="#sect2" title="Next Section">Hello</a>
+                        <a href="#sect3" title="Next Section">History</a>
+                        <a href="#sect4" title="Next Section">Portfolio</a>
+                        <a href="#sect5" title="Next Section">Contact</a>
                         <a href="javascript:void(0);" class="icon">
                             <div class="menuIcon" onclick="animatedMenu(this)">
                                 <div class="bar1"></div>
@@ -58,13 +60,20 @@
             </section> <!--Section 3 ends here-->
             <section id="sect4">
                     <h2>Hire Me.</h2>
-                    <p>I am available for exciting employment opportunities! If you're interested in having some work done download my <a href="docs/JSick-Resume-07112018.pdf" target="_blank">resume</a>, check out <a href="https://www.behance.net/Jannaee">my portfolio</a> and get in touch with me.</p>
+                    <p>I am available for exciting employment opportunities! If you're interested in having some work done download my <a href="docs/JSick-Resume-07112018.pdf" target="_blank">resume</a>, check out <a href="https://www.behance.net/Jannaee" target="_blank">my portfolio</a> and get in touch with me.</p>
 
             </section>
 
             <section id="sect5">
                     <h2>Contact Me.</h2>
-                    <a href="https://goo.gl/forms/0FgH6kABB0smJRN62">send me a message</a>
+                    <p>If you are interested in learning more about me or just looking to share your own constructive thoughts, <a href="https://goo.gl/forms/0FgH6kABB0smJRN62">send me a message</a>. I love getting mail from real people.</p>
+                    
+                    <p>
+                        <a href="https://www.behance.net/Jannaee" target="_blank"><i class="fab fa-behance"></i></a>
+                        <a href="https://www.linkedin.com/in/jannaee/" target="_blank"><i class="fab fa-linkedin"></i></a> 
+                        <a href="https://github.com/jannaee" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/jannaee" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    </p>     
             </section>
 
             <section id="sect6"><!--Blank section for hero image to show--></section>  
@@ -72,11 +81,7 @@
     </div><!--Container ends-->
 
     <footer>
-        <div class="connectWithMe">
-            <p>Oh, hey! Looking for more?</p>
-            <p><a href="#"><i class="fab fa-behance"></i></a> <a href="#"><i class="fab fa-linkedin"></i></a> <a href="#"><i class="fab fa-github"></i></a> <a href="#" alt="facebook"></a><i class="fab fa-facebook-f"></i></a></p>     
-            <p>&copy; 2018 Website handcoded with ❤ by Jannaee Sick</p>
-        </div>
+       <p>&copy; 2018 Website handcoded with ❤ by Jannaee Sick</p>
     </footer>
 
 </body>
