Added protected section with Firebase auth and resume

--- a/resume-utility/resume.html
+++ b/resume-utility/resume.html
@@ -39,7 +39,7 @@
                             <div class="icon-wrapper">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                             </div>
-                            <span>jannaee@gmail.com</span>
+                            <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ee848f80808f8b8bae89838f8782c08d8183">[email&#160;protected]</a></span>
                         </div>
                         <div class="contact-item">
                             <div class="icon-wrapper">
@@ -298,11 +298,4 @@
                         <span class="education-title"><span class="bold">Bachelor of Graphic Design</span> <span class="org">| University of North Florida</span></span>
                         <span class="education-date">Dec 2005</span>
                     </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="script.js"></script>
-</body>
-</html>
+  
