Updating contact methods

--- a/index.html
+++ b/index.html
@@ -1610,9 +1610,9 @@
                     <span class="icon">💻</span>
                     <span>GitHub</span>
                 </a>
-                <a href="https://jannaee.github.io" class="contact-card" target="_blank">
-                    <span class="icon">🌐</span>
-                    <span>Portfolio</span>
+                <a href="https://jannaee.github.io/protected.html" class="contact-card" target="_blank">
+                    <span class="icon">🔒</span>                        
+                    <span>Recruiters Only</span>
                 </a>
             </div>
         </div>
