--- a/resume.html
+++ b/resume.html
@@ -33,13 +33,13 @@
                             <div class="icon-wrapper">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
                             </div>
-                            <span>984-220-5585</span>
+                            <span>(919)355-8055</span>
                         </div>
                         <div class="contact-item">
                             <div class="icon-wrapper">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
                             </div>
-                            <span><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ee848f80808f8b8bae89838f8782c08d8183">[email&#160;protected]</a></span>
+                            <span>jannaee+forhire@gmail.com</span>
                         </div>
                         <div class="contact-item">
                             <div class="icon-wrapper">
