updated image paths

--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
                 </div>
             </div>
             <div class="hero-image-container">
-                <img src="/mnt/user-data/uploads/1770176038179_image.png" alt="Work-Life Balance" class="hero-image">
+                <img src="mobileUIUX.gif" alt="Front end dev and ui ux designer" class="hero-image">
             </div>
         </div>
     </section>
@@ -1516,7 +1516,7 @@
             <div class="badges-grid">
                 <!-- IBM Enterprise Design Thinking - Your uploaded badge! -->
                 <div class="badge-container reveal">
-                    <img src="/mnt/user-data/uploads/1770231984885_image.png" alt="IBM Enterprise Design Thinking Practitioner" class="badge-image">
+                    <img src="assets/Badges_v8-07_Practitioner.png" alt="IBM Enterprise Design Thinking Practitioner" class="badge-image">
                     <div class="badge-name">Enterprise Design Thinking Practitioner</div>
                     <div class="badge-issuer">IBM</div>
                     <div class="badge-date">2023</div>
@@ -1584,7 +1584,7 @@
             <div style="text-align: center; margin-top: 2.5rem;">
                 <p style="color: var(--navy-medium); font-size: 0.95rem;">
                     View all my credentials on 
-                    <a href="https://www.credly.com/users/[your-username]" target="_blank" style="color: var(--cyan); text-decoration: none; font-weight: 600;">Credly →</a>
+                    <a href="https://www.credly.com/users/jannaee-sick.0ecca8f2/badges#credly" target="_blank" style="color: var(--cyan); text-decoration: none; font-weight: 600;">Credly →</a>
                 </p>
             </div>
         </div>
@@ -1593,9 +1593,8 @@
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
         <div class="container">
-            <div class="section-header reveal">
+            <div class="section-header reveal" >
                 <h2>Let's Connect</h2>
-                <p>Always interested in new opportunities and collaborations</p>
             </div>
             <div class="contact-links reveal">
                 <a href="https://linkedin.com/in/jannaee" class="contact-card" target="_blank">
