--- a/index.html
+++ b/index.html
@@ -1135,7 +1135,7 @@
                 </div>
             </div>
             <div class="hero-image-container">
-                <img src="mobileUIUX.gif" alt="Front end dev and ui ux designer" class="hero-image">
+                <img src="assets/mobileUIUX.gif" alt="Front end dev and ui ux designer - illustration by https://storyset.com/" class="hero-image">
             </div>
         </div>
     </section>
@@ -1522,32 +1522,18 @@
                     <div class="badge-date">2023</div>
                 </div>
 
-                <!-- 
-                TO ADD MORE CREDLY BADGES:
-                1. Go to your Credly profile: https://www.credly.com/users/[your-username]
-                2. Click on a badge
-                3. Right-click the badge image and select "Copy Image Address"
-                4. Replace the div below with:
-                   <img src="[paste-credly-image-url-here]" alt="Badge Name" class="badge-image">
-                
-                Example Credly badge URLs look like:
-                https://images.credly.com/size/340x340/images/[badge-id]/badge.png
-                -->
-
                 <!-- Google Mobile Web Specialist -->
                 <div class="badge-container reveal">
-                    <div class="badge-image" style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #4285f4, #34a853, #fbbc05, #ea4335); color: white; border-radius: 50%; font-size: 3rem; font-weight: 700;">G</div>
+                    <img src="assets/Mobile-Web-Specialist-Badge.png" alt="Mobile Web Specialist by Google Developers" class="badge-image">
                     <div class="badge-name">Mobile Web Specialist</div>
-                    <div class="badge-issuer">Google & Udacity</div>
+                    <div class="badge-issuer"><a href="https://developers.googleblog.com/introducing-the-mobile-web-specialist-certification-by-google-developers/" target="_blank">Google & Udacity</a></div>
                     <div class="badge-date">2018</div>
                 </div>
 
                 <!-- IBM Agile Explorer -->
                 <div class="badge-container reveal">
-                    <div class="badge-image" style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, var(--navy-deep), var(--cyan)); color: white; border-radius: 50%; font-size: 2rem; font-weight: 700;">
-                        <svg width="80" height="80" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
-                            <text x="50" y="65" text-anchor="middle" fill="white" font-size="36" font-weight="bold" font-family="Arial, sans-serif">IBM</text>
-                        </svg>
+                    <div class="badge-image" style="display: flex; align-items: center; justify-content: center;  color: white; border-radius: 50%; font-size: 2rem; font-weight: 700;">
+                        <img src="assets/agile-explorer-big.png" alt="IBM Enterprise Design Thinking Practitioner" class="badge-image">
                     </div>
                     <div class="badge-name">Agile Explorer Certification</div>
                     <div class="badge-issuer">IBM</div>
@@ -1556,9 +1542,11 @@
 
                 <!-- IDEO Creative Leadership -->
                 <div class="badge-container reveal">
-                    <div class="badge-image" style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #ff6b6b, #feca57); color: white; border-radius: 50%; font-size: 2.5rem; font-weight: 700;">🎓</div>
+                    <div class="badge-image" style="display: flex; align-items: center; justify-content: center;  color: white; border-radius: 50%; font-size: 2rem; font-weight: 700;">
+                        <img src="assets/Creative-Leadership-IDEO-U.png"  alt="Creative Leadership by IDEO University" class="badge-image">
+                    </div>                    
                     <div class="badge-name">Creative Leadership</div>
-                    <div class="badge-issuer">IDEO University</div>
+                    <div class="badge-issuer"><a href="https://certificates.ideou.com/7b156907-b08a-4582-9a79-249e862c880e#acc.FTKbya8M" target="_blank">IDEO University</a></div>
                     <div class="badge-date">2026</div>
                 </div>
 
@@ -1574,7 +1562,7 @@
                 <div class="badge-container reveal">
                     <div class="badge-image" style="display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, var(--yellow), var(--yellow-bright)); color: var(--navy-deep); border-radius: 50%; font-size: 2.5rem; font-weight: 700;">💻</div>
                     <div class="badge-name">Hackathon Winner</div>
-                    <div class="badge-issuer">Code.gov</div>
+                    <div class="badge-issuer"><a href="https://code.gov/hackathon/" target="_blank">Code.gov</a></div>
                     <div class="badge-date">2019</div>
                 </div>
 
